@@ -80,6 +80,15 @@ A reasonable default is used if not specified.}
 \twocolitem{motif.largebuttons}{If 1, uses a bigger default size for wxButtons.}
 \end{twocollist}
 
+\wxheading{All}
+
+\twocolwidtha{7cm}
+\begin{twocollist}\itemsep=0pt
+\twocolitem{{\bf Option}}{{\bf Value}}
+\twocolitem{sizer.desktopmargin.x}{The horizontal margin to subtract from the desktop size when computing the maximum top-level window size in wxSizer::Fit.}
+\twocolitem{sizer.desktopmargin.y}{The vertical margin to subtract from the desktop size when computing the maximum top-level window size in wxSizer::Fit.}
+\end{twocollist}
+
 The compile-time option to include or exclude this functionality
 is wxUSE\_SYSTEM\_OPTIONS.
 
